recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: not found: value levels
  if (levels < 1){
      ^Sierpinski:10: error: not found: value levels
  sierpinski(levels - 1 , length / 3)
             ^Sierpinski:13: error: not found: value levels
  sierpinski(levels - 1 , length / 3)
             ^Sierpinski:16: error: not found: value levels
  sierpinski(levels - 1 , length / 3)
             ^