recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if (levels < 1){
    avance(length)
    droite(60)
    avance(length)
    droite(60)
    avance(length)
    droite(60)
    return
  }
  sierpinski(levels - 1 , length / 3)
  avance(length)
  droite(60)
  sierpinski(levels - 1 , length / 3)
  avance(length)
  droite(60)
  sierpinski(levels - 1 , length / 3)
  avance(length)
  droite(60)
}